err.txt
file:///D:/Projects/Non%20paid%20projects/Design%20Specification%20for%20RAAH/Design%20Specification%20for%20RAAH/server/index.js:623
        res.json({ message: \`Lawyer status updated to \${status}\`, profile: result.rows[0] });
                            ^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:102:18)
    at #translate (node:internal/modules/esm/loader:468:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:515:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:115:19)

Node.js v22.14.0
